[package]
name = "rs-chip8"
version = "0.1.0"
authors = ["OscarClemente <oscar.clemente@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.2"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["gfx"]